--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
       "name": "Python venv",
       "type": "python",
       "request": "launch",
-      "program": "agent_tool_maker.py",
+      "program": "main.py",
       "justMyCode": true
     }
   ]
